[tool.poetry]
name = "vg-stats"
version = "0.1.0"
description = ""
authors = ["jpchato <jpchato@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyterlab = "^2.1.3"
pandas = "^1.0.3"
matplotlib = "^3.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
